        "ALLOW Anonymous" instead.

        * Bug fix: build.xml's web unit tests were not guaranteeing
        use of XMLUserDatabase for non-JDBC tests. If built with
        a jspwiki.properties.tmpl that specified the JDBC database,
        this caused certain web unit tests to fail. We now force
        the user database implementation for all web unit tests.
        
        * WebContainerAuthorizer now throws a RuntimeException
        if it cannot somehow parse the web.xml. This isn't ideal,
        but it's better than ignoring the error. Credit: Jürgen Weber.
        
        * Removed unused imports and unreferenced objects in
        multiple classes. This does not affect functionality.
        
        * Removed obsolete "useOldAuth" refs from test
        jspwiki.properties.
        
        * Many Javadoc tweaks and additional comments.

2006-02-02  Erik Bunn  <Erik.Bunn@basen.net>

        * 2.3.75 
        
        * Fixed WikiContext.getURL(...) test for absolute reference style.

2006-01-29  Andrew Jaquith <andrew@freshcookies.org>

        * 2.3.74
        
        * Web unit test scripts gain 3 more tests, which verify that
        JSPWiki users can 1) create new pages (no ACL), 2) create new pages
        with unrestricted view permissions and 3) create new
        pages with restricted view permissions.

        * Slightly tweaked WikiContext to make hasAccess() more 
        flexible; redirection-on-failure can optionally be turned
        off. Removed WikiContext.REGISTER; it is obsolete. Also,
        removed WikiPermission.REGISTER target; please use EDIT_PROFILE
        instead.
        
        * WikiServletFilter now takes responsibility for setting
        Log4J NDC logging contexts. It also now takes care of WikiSession
        message cleanup. All top-level JSPs changed (very) slightly,
        and are simpler, as a result.
        
        * Bug fix: CommentContent.jsp now defaults to the "Add Comment"